# myFlaskProject

./: app.py  pyproject.toml  routes.py
my_client/: client.py
